edit on meal details layout

--- a/app/src/main/res/layout/fragment_fav_meal_details.xml
+++ b/app/src/main/res/layout/fragment_fav_meal_details.xml
@@ -116,489 +116,13 @@
                 android:textSize="23dp"
                 android:textStyle="bold" />
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
 
-            <TextView
-                android:id="@+id/favingredient1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="15dp"
-            >
-
-            <TextView
-                android:id="@+id/favingredient9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/FavingrediantsRecycler"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient17"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement17"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient19"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement19"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/favingredient20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags:"
-                android:textSize="23dp"
-                android:textColor="@color/green" />
-
-            <TextView
-                android:id="@+id/favmeasurement20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags Value"
-                android:textSize="20dp"
-                android:textColor="@color/lightBlack"
-                android:layout_marginStart="8dp" />
-        </LinearLayout>
+            />
 
         <!-- Meal Instructions Section -->
         <LinearLayout
