--- a/app/src/main/res/layout/fragment_ingrediants.xml
+++ b/app/src/main/res/layout/fragment_ingrediants.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".IngrediantsFragment"
     android:layout_marginLeft="15dp"
-    android:layout_width="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
